k8s-resources/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-resources-express-mongo: "true"
        io.kompose.network/k8s-resources-react-express: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: backend
          name: backend
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app
              name: backend-claim0
            - mountPath: /usr/src/app/node_modules
              name: backend-claim1
      restartPolicy: Always
      volumes:
        - name: backend-claim0
          persistentVolumeClaim:
            claimName: backend-claim0
        - name: backend-claim1
          persistentVolumeClaim:
            claimName: backend-claim1
status: {}
