k8s-resources/k8s-resources-react-express-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: k8s-resources-react-express
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/k8s-resources-react-express: "true"
  podSelector:
    matchLabels:
      io.kompose.network/k8s-resources-react-express: "true"
